syntax = "proto3";

option go_package = "github.com/aldian78/go-react-ecommerce/proto/pb/cart";

import "basecommon/base_response.proto";
import "buf/validate/validate.proto";
import "api/api.proto";

package cart;

service CartService {
    rpc AddProductToCart(api.APIREQ) returns (api.APIRES);
    rpc ListCart(api.APIREQ) returns (api.APIRES);
    rpc DeleteCart(api.APIREQ) returns (api.APIRES);
    rpc UpdateCartQuantity(api.APIREQ) returns (api.APIRES);
}

message AddProductToCartRequest {
    string product_id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message AddProductToCartResponse {
    basecommon.BaseResponse base = 1;
    string id = 2;
}

message ListCartRequest {}

message ListCartResponseItem {
    string cart_id = 1;
    string product_id = 2;
    string product_name = 3;
    string product_image_url = 4;
    double product_price = 5;
    int64 quantity = 6;
}

message ListCartResponse {
    basecommon.BaseResponse base = 1;
    repeated ListCartResponseItem items = 2;
}

message DeleteCartRequest {
    string cart_id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message DeleteCartResponse {
    basecommon.BaseResponse base = 1;
}

message UpdateCartQuantityRequest {
    string cart_id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    int64 new_quantity = 2 [(buf.validate.field).int64.gte = 0];
}

message UpdateCartQuantityResponse {
    basecommon.BaseResponse base = 1;
}